--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS Util Library Tuts</title>
+    <title>JS Util Library </title>
+
+    <style>
+
+    </style>
 </head>
 <body>
     
+    <script src="/JS_util_Library/js/main.js" type="module"> </script>
 </body>
 </html>
